--- a/style.css
+++ b/style.css
@@ -83,12 +83,12 @@ body{
 }
 .secondPage section{
     background-color: #000;
-    margin:.5cm 1cm;
+    margin:.5cm .5cm;
     display: flex;
     justify-content: space-between;
     align-items: center;
     color: #fff;
-    padding: 10px 1.5cm;
+    padding: 10px .5cm;
     display:none ;
 }
 .secondPage #total{
@@ -97,7 +97,7 @@ body{
     gap: 30px;
 }
 .secondPage #total button{
-    padding: 3px 10px;
+    padding: 3px 12px;
     height: .7cm;
     border: none;
     border-radius:1cm;
@@ -107,6 +107,7 @@ body{
 }
 .secondPage section img{
     width: 40px;
+    border-radius:3px
 }
 .secondPage section div{
     display: flex;
